testsuite/tests/backpack/should_fail/bkpfail15.stderr
[1 of 3] Processing p
  [1 of 3] Compiling A[sig]          (.hsig -> nothing)
  [2 of 3] Compiling Q[sig]          (.hsig -> nothing)
  [3 of 3] Compiling P               (.hs -> nothing)
[2 of 3] Processing q
  Instantiating q
  [1 of 1] Compiling Q               (.hs -> .o)
[3 of 3] Processing r
  [1 of 1] Compiling A[sig]          (.hsig -> nothing)

bkpfail15.bkp:8:9: error:
    • Identifier ‘q:Q.f’ has conflicting definitions in the module
      and its hsig file
      Main module: q:Q.f :: GHC.Types.Bool
      Hsig file:  q:Q.f :: GHC.Types.Int
      The two types are different
    • while checking that q:Q implements signature Q in p[A=<A>, Q=q:Q]
